namespace.yaml
---
# 1. Creating a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: development

---
# 2. Deploying a pod in a specific namespace
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: development
spec:
  containers:
  - name: myapp-container
    image: nginx:latest
