rollingupdate.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-171:v2
          ports:
            - name: http
              containerPort: 8181
          startupProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 20
            periodSeconds: 5
